--- a/index.html
+++ b/index.html
@@ -32,12 +32,9 @@
     <h3>Regis Boudinot</h3>
     <p>Security Engineering Manager at Allstate</p>
     <p>Open Source - Security - Containers - Polyglot - DevSecOps</p>
-    <a href="https://twitter.com/rboudinot">twitter</a><br />
     <a href="https://github.com/selfup">github</a><br />
-    <a href="https://www.youtube.com/channel/UCH0pa284okKo8qKrLdFaOew"
-      >youtube</a
-    >
-    (my music)<br />
+    <a href="https://www.youtube.com/channel/UCH0pa284okKo8qKrLdFaOew">youtube</a>(my music)
+    <br />
     <a href="https://dom.events">dom.events</a> (my blog)<br />
     <a href="https://keybase.io/selfup">keybase</a><br />
     <a href="https://gitlab.com/selfup">gitlab</a><br />
