--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <body>
     <h3>Regis Boudinot</h3>
-    <p>Security Engineering Manager at Allstate</p>
+    <p>Manager of Security Innovation Engineering at Allstate</p>
     <p>Open Source - Security - Containers - Polyglot - DevSecOps</p>
     <ul>
       <li><a href="https://github.com/selfup">github</a></li>
