--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
           'Segoe UI Emoji', 'Segoe UI Symbol';
         background: #222;
-        color: white;
+        color: #faebd7;
       }
       
       a {
