--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
   <body>
     <h3>Regis Boudinot</h3>
-    <p>Manager of Security Innovation Engineering at Allstate</p>
     <p>Open Source - Security - Containers - Polyglot - DevSecOps</p>
+    <p>Audio/Video/Photo Production</p>
     <ul>
       <li><a href="https://github.com/selfup">github</a></li>
       <li><a href="https://www.youtube.com/channel/UCH0pa284okKo8qKrLdFaOew">youtube</a> (my music)</li>
