--- a/index.html
+++ b/index.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--
-    Copyright (c) 2019 Regis Boudinot
-  -->
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="“viewport”" content="initial-scale=1.0" />
-    <meta name="viewport" content="width=device-width, maximum-scale=1" />
-    <meta name="description" content="Portfolio website" />
-    <meta name="author" content="Regis Jean-Pierre Boudinot (selfup)" />
 
-    <title>Selfup</title>
+<!--
 
-    <style>
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Ubuntu,
-          Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
-          'Segoe UI Emoji', 'Segoe UI Symbol';
-        background: #222;
-        color: #faebd7;
-      }
-      
-      a {
-        color: #539bf5;
-      }
-    </style>
-  </head>
+Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
 
-  <body>
-    <h3>Regis Boudinot</h3>
-    <p>Open Source - Security - Containers - Polyglot - DevSecOps</p>
-    <p>Audio/Video/Photo Production</p>
-    <ul>
-      <li><a href="https://github.com/selfup">github</a></li>
-      <li><a href="https://www.youtube.com/channel/UCH0pa284okKo8qKrLdFaOew">youtube</a> (my music)</li>
-      <li><a href="https://dom.events">dom.events</a> (my blog)</li>
-      <li><a href="https://keybase.io/selfup">keybase</a></li>
-      <li><a href="https://www.linkedin.com/in/regisboudinot">linkedin</a></li>
-    </ul>
-  </body>
+-->
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="“viewport”" content="initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, maximum-scale=1" />
+  <meta name="description" content="Portfolio website" />
+  <meta name="author" content="Regis Jean-Pierre Boudinot (selfup)" />
+
+  <title>selfup</title>
+
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Ubuntu,
+        Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+        'Segoe UI Emoji', 'Segoe UI Symbol';
+      background: #222;
+      color: #faebd7;
+    }
+
+    a {
+      color: #539bf5;
+    }
+  </style>
+</head>
+
+<body>
+  <h3>Régis Jean-Pierre Boudinot</h3>
+  <p>AKA: selfup</p>
+  <p>Open Source - Security</p>
+  <p>Containers - Polyglot - DevSecOps</p>
+  <p>Audio, Video, Photo, and Game Production</p>
+  <ul>
+    <li><a href="https://github.com/selfup">github</a></li>
+    <li><a href="https://www.youtube.com/channel/UCH0pa284okKo8qKrLdFaOew">youtube</a> (my music)</li>
+    <li><a href="https://dom.events">dom.events</a> (my blog)</li>
+    <li><a href="https://bsky.app/profile/selfup.bsky.social">bluesky</a></li>
+    <li><a href="https://keybase.io/selfup">keybase</a></li>
+    <li><a href="https://www.linkedin.com/in/regisboudinot">linkedin</a></li>
+  </ul>
+
+  <h3>PastelCel</h3>
+  <img src="PastelCel.svg" alt="PastelCel" style="width:256px;height:256px;border-radius: 3px;">
+</body>
+
 </html>
