add profile pic

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
 
 <body>
   <h3>Régis Jean-Pierre Boudinot</h3>
+
+  <img src="https://avatars.githubusercontent.com/u/9837366?v=4" style="width:256px;height:256px;border-radius: 3px;">
+
   <p>AKA: selfup</p>
   <p>Open Source - Security</p>
   <p>Containers - Polyglot - DevSecOps</p>
