use global style for img

--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@ Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
     a {
       color: #539bf5;
     }
+
+    img {
+      width: 200px;
+      height: 200px;
+      border-radius: 3px;
+    }
   </style>
 </head>
 
 <body>
   <h3>Régis Jean-Pierre Boudinot</h3>
 
-  <img src="https://avatars.githubusercontent.com/u/9837366?v=4" style="width:200px;height:200px;border-radius: 3px;">
+  <img src="https://avatars.githubusercontent.com/u/9837366?v=4" alt="Profile Picture">
 
   <p>AKA: selfup</p>
   <p>Open Source - Security</p>
@@ -51,7 +57,7 @@ Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
   </ul>
 
   <h3>PastelCel</h3>
-  <img src="PastelCel.svg" alt="PastelCel" style="width:200px;height:200px;border-radius: 3px;">
+  <img src="PastelCel.svg" alt="PastelCel">
 </body>
 
 </html>
