--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="“viewport”" content="initial-scale=1.0" />
-  <meta name="viewport" content="width=device-width, maximum-scale=1" />
+  <meta name="viewport" content="width=device-width" />
   <meta name="description" content="Portfolio website" />
   <meta name="author" content="Regis Jean-Pierre Boudinot (selfup)" />
 
@@ -41,7 +41,7 @@ Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
 <body>
   <h3>Régis Jean-Pierre Boudinot</h3>
 
-  <img src="https://avatars.githubusercontent.com/u/9837366?v=4" alt="Profile Picture">
+  <img src="ProfilePic.jpeg" alt="Profile Picture">
 
   <p>AKA: selfup</p>
   <p>Open Source - Security</p>
