add space around links - update index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@ Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
       color: #faebd7;
     }
 
+    li:not(:first-child) {
+      margin-top: 1em;
+    }
+
     a {
       color: #539bf5;
     }
@@ -39,11 +43,10 @@ Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
 </head>
 
 <body>
-  <h3>Régis Jean-Pierre Boudinot</h3>
+  <h3>Régis Jean-Pierre Boudinot (selfup)</h3>
 
   <img src="ProfilePic.jpeg" alt="Profile Picture">
 
-  <p>AKA: selfup</p>
   <p>Open Source - Security</p>
   <p>Containers - Polyglot - DevSecOps</p>
   <p>Audio, Video, Photo, and Game Production</p>
