--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
 
   <h3>PastelCel</h3>
   <img src="PastelCel.svg" alt="PastelCel">
+
+  <p>Copyright © 2019-2025 Regis Jean-Pierre Boudinot. All Rights Reserved</p>
 </body>
 
 </html>
