--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
       height: 200px;
       border-radius: 3px;
     }
+
+    .copy {
+      font-size: 9px;
+    }
   </style>
 </head>
 
@@ -62,7 +66,7 @@ Copyright (c) 2019 - 2025 Regis Jean-Pierre Boudinot. All Rights Reserved
   <h3>PastelCel</h3>
   <img src="PastelCel.svg" alt="PastelCel">
 
-  <p>Copyright © 2019-2025 Regis Jean-Pierre Boudinot. All Rights Reserved</p>
+  <p class="copy"><em>Copyright © 2019-2025 Regis Jean-Pierre Boudinot. All Rights Reserved</em></p>
 </body>
 
 </html>
